<resources>
    <string name="app_name">Thriftify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="checkout">Checkout</string>
    <string name="desc_avatar">Login Image</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password_less_than_8">Password must be at least 8 characters</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Preloved Clothing for a Classy Lifestyle</string>
    <string name="title_welcome_page">Welcome to Thriftify App!</string>
    <string name="title_signup_page">Complete Your Details Below</string>
    <string name="message_login_page">Style That Speaks, Classy Looks Start Here</string>
    <string name="title_login_page">Ready to share your story here?</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="error_message">Error</string>
    <string name="login_logo">Login Logo</string>
    <string name="description">Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="ok">OK</string>
    <string name="success_title">Hooray!</string>
    <string name="login_success_message">You have successfully logged in.</string>
    <string name="continue_button">Continue</string>
    <string name="registration_success_title">Registration Successful!</string>
    <string name="registration_success_message">Account with email %1$s has been created. Please login.</string>
    <string name="error_unknown">An Unknown Error Occurred</string>
    <string name="error_connection_failed">Failed to Connect to The Server</string>
    <string name="error_title">Error</string>
    <string name="register_text">Don\'t have an account? <a href="#">Register here</a></string>
    <string name="login_text">Do you have an account? <a href="#">Login here</a></string>
    <string name="message_register_page">Vintage Finds for a Refined Lifestyle</string>
    <string name="phone">Phone Number</string>
    <string name="phone_empty">Phone Number Cannot Empty</string>
    <string name="phone_invalid">Phone Number is Invalid</string>
    <string name="phone_must_number">You Can Only Input Numbers</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="send_email">Send_email</string>
    <string name="product_image">Product Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galery</string>
    <string name="description_hint">Write Your Product Description Here</string>
    <string name="upload">Upload</string>
    <string name="upload_product">Upload Your Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price </string>
    <string name="product_clothing_type">Clothing Type</string>
    <string name="button_add_product">Add Product</string>
    <string name="history_of_clothing">History of Clothing</string>
    <string name="clothing_list">Clothing List</string>
    <string name="empty_image_warning">Please Upload Image First!</string>
    <string name="product_upload_success">Product Uploaded Successfully</string>
    <string name="user_not_found">User Not Found</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="positive_button">Continue</string>
    <string name="owner">Owner</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="title_detail">Detail Title</string>
    <string name="phone_hint">Prefix with country code (example: 62xxxxx)</string>
    <string name="purchase_message">Hello %1$s, I would like to purchase %2$s at the price offered on Thriftify App Rp. \"%3$d\".</string>
    <string name="product_clothing_usage">Clothing Usage</string>
    <string name="error_classification_failed">Error Classification Failed</string>
    <string name="error_token_refresh_failed">Error Refresh Token Failed</string>

</resources>