<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24"
        android:title="@string/search"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_black_24"
        android:title="@string/account" />

</menu>