<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/product_image"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="14sp"
            android:paddingTop="4dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
